fixed spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,7 +62,7 @@ input {
 }
 
 .page-sidebar p {
-  margin: 5px 0;
+  margin: 10px 0;
   padding: 0 1rem;
   cursor: pointer;
 }
